crates/embucket-functions/src/tests/string_binary/snapshots/substr/query_substr_zero_position.snap
---
source: crates/embucket-functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', 0, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "| mys    |",
        "+--------+",
    ],
)
